# ChessAI

./: .gitignore  README.md  pyproject.toml
chessai/state/: state_score.py
sandbox/: graph_example.py  pyTorch_example.py  pyTorch_graphs.py
src/game_state/: get_game_state.py
src/pettingzoo/: chess_env.py
src/state/: game_state.py  state_score.py
