[tool.poetry]
name = "chessai"
version = "0.1.0"
description = ""
authors = ["Andrew Kula <arkula931@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
Flask = "^2.3.0"
pettingzoo = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
